fromEvent add stop$ Observable and add in Observe

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <app-root></app-root>
+  <canvas id="canvas" width="400" height="400" style="border: 1px solid red; margin: 50px"></canvas>
+<input type="text" name="s" id="search">
+<button id="stop">Stop</button>
 </body>
 </html>
