fromEvent add stop$ Observable and add in Observe

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
   <app-root></app-root>
+<input type="text" name="s" id="search">
+<button id="stop">Stop</button>
 </body>
 </html>
